# k8s-demo-app

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
cmd/app/: BUILD.bazel  main.go
metrics/: BUILD.bazel  metrics.go
